[package]
name = "async-retry"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Async Retry"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/retry-rs"
homepage = "https://github.com/bk-rs/retry-rs"
documentation = "https://docs.rs/async-retry"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = ["retry-policy/std", "futures-util/std"]

[dependencies]
async-sleep = { version = "0.1", default-features = false, features = ["timeout"] }
retry-policy = { version = "0.0", default-features = false, path = "../retry-policy" }

futures-util = { version = "0.3", default-features = false }
pin-project-lite = { version = "0.2", default-features = false }

[dev-dependencies]
tokio = { version = "1.16", features = ["macros", "rt-multi-thread"] }
once_cell = { version = "1.9" }

async-sleep = { version = "0.1", features = ["impl_tokio"] }
retry-policy = { version = "0.0", default-features = false, features = ["std"], path = "../retry-policy" }
