[package]
name = "retry-backoff"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Retry Backoff"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/retry-rs"
homepage = "https://github.com/bk-rs/retry-rs"
documentation = "https://docs.rs/retry-backoff"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std", "all_backoffs"]
std = ["alloc"]
alloc = []

# backoffs
all_backoffs = ["impl_exponential_backoff", "impl_backoff_rs"]

impl_exponential_backoff = ["exponential-backoff", "std"]
impl_backoff_rs = ["backoff-rs", "std"]

[dependencies]
exponential-backoff = { version = "1.1", default-features = false, optional = true }
backoff-rs = { version = "0.1", default-features = false, optional = true }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
skip_feature_sets = [
    ["impl_exponential_backoff"],
    ["impl_backoff_rs"],
]
