[package]
name = "retry-policy"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Retry Policy"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/retry-rs"
homepage = "https://github.com/bk-rs/retry-rs"
documentation = "https://docs.rs/retry-policy"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = []

[dependencies]
retry-backoff = { version = "0.0", default-features = false, path = "../retry-backoff" }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
skip_feature_sets = [
    ["google_cloud_workflows"],
]
