[package]
name = "retry-policy"
version = "0.3.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2024"
description = "Retry Policy"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/retry-rs"
homepage = "https://github.com/bk-rs/retry-rs"
documentation = "https://docs.rs/retry-policy"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = ["alloc", "retry-backoff/std", "retry-predicate/std"]
alloc = ["retry-backoff/alloc", "retry-predicate/alloc"]

# policies

[dependencies]
retry-backoff = { version = "0.2", default-features = false, path = "../retry-backoff" }
retry-predicate = { version = "0.1", default-features = false, path = "../retry-predicate" }
