[package]
name = "retry-predicate"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Retry Predicate"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/retry-rs"
homepage = "https://github.com/bk-rs/retry-rs"
documentation = "https://docs.rs/retry-predicate"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = ["alloc"]
alloc = []

# predicates

[dependencies]
